--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 		if (ball.y < 0) {
 			ball.y = 0;
 		} else if (ball.y > canvas.height) {
-			ball.x = canvas.height;
+			ball.y = canvas.height;
 		}
 
 		for (i=0; i<goals.length; i++) {
